
Remove cray compiler directives
ice_albedo.F, ice_init.F, ice_ltd.F, ice_ltd_linear.F, ice_mechred.F, ice_therm_itd.F, ice_therm_vertical.F, swmod2.F

Ice mod bounds fix
mod_ice.F

Ice mod add ice river outflow
mod_ice.F

Add basal ice stress to ice model
mod_ice2d.F

Time fix for oned
mod_obcs.F mod_onedtide.F

Fix grid edge in station_timeseries
mod_station_timeseries.F

Add spherical adjustment to CURCOR
adcor.F

Add missing multiproccessor share
mod_wave_current_interaction.F

Add wave current ice_in
bcond_gcy.F, mod_bulk.F, mod_force.F, mod_input.F, mod_main.F, vdif_q.F, swanmain.F, mod_action_ex.F

Changes to parameters and add ice in vdif GOM version
vdif_ts_gom.F

Specifiy precisions
coare40vn.F, mod_interp.F

Tidy up continues and error messages
bcond_gcn.F, bcond_gcy.F, internal_step.F, mod_assim.F,  mod_bio_3D.F, mod_dam.F,  mod_enkf.F, mod_enkf_obs.F, mod_enkfassim.F, mod_esmf_nesting.F, mod_etkf.F, mod_flocmod.F, mod_input.F, mod_interp.F, mod_lag.F, mod_nesting.F, mod_non_hydro.F, mod_obcs.F, mod_pwp.F, mod_rrk.F, mod_rrkassim.F, mod_rrkf_obs.F, mod_semi_implicit.F, mod_sng.F, mod_solar.F, mod_utils.F, mod_wqm.F, ocpcre.F, ocpids.F, ocpmix.F, swancom1.F, swancom2.F, swancom3.F, swancom4.F, swancom5.F, swanmain.F, swanser.F, swmod3.F

Add inundation maps
mod_ncdio.F, mod_wd.F

MPI comm edit (mpi_comm_world --> mpi_fvcom_group etc), metis5
fvcom.F, genmap.F, genmap_lsf.F, genmap_obc.F, ice_init.F, ice_coupling.F, mod_action_im.F, mod_assim.F, mod_boundshck.F, mod_dye.F, mod_enkf_obs.F, mod_enkfassim.F, mod_etkf.F, mod_ice2D.F, mod_input.F, mod_lag.F, mod_main.F, mod_meanflow.F, mod_ncdio.F, mod_nctools.F, mod_nesting.F, mod_newimp.F, mod_non_hydro.F, mod_obcs2.F, mod_par.F, mod_par_special.F, mod_petsc.F, mod_report.F, mod_rrk.F, mod_rrkassim.F, mod_rrkf_obs.F, mod_semi_implicit.F, mod_setup.F, mod_sparse_timeseries.F, mod_utils.F, mod_wavesetup.F,  mod_wqm.F,  print_vals.F, setup_domain.F, swancom1.F, swanmain.F,  swanpre2.F

mpi i/o
mod_nctools.F
