@@ -1097,7 +1097,9 @@ MODULE CONTROL
    CHARACTER(LEN=80), PARAMETER :: STYPE_RESTART= "RESTART"
 !--Sigma Level Parameters for case GEOMETRIC OF UNIFORM------------------------!
    REAL(SP) :: P_SIGMA      !!PARAMETER CONTROLLING SIGMA LEVEL DISTRIBUTION
-
+!JQI NOV2021
+   REAL(SP) :: P_SIGMA_DISTRIBUTION !!ANOTHER PARAMETER CONTROLLING SIGMA LEVEL DISTRIBUTION WHEN P_SIGMA = 1 
+!JQI NOV2021
 !--General Vertical Level Parameters for case TANH ----------------------------!
    REAL(SP) :: DU2          !!PARAMETER CONTROLLING LEVEL DISTRIBUTION OF SURFACE
    REAL(SP) :: DL2          !!PARAMETER CONTROLLING LEVEL DISTRIBUTION OF BOTTOM
