@@ -61,3 +61,6 @@ fvcom.F, genmap.F, genmap_lsf.F, genmap_obc.F, ice_init.F, ice_coupling.F, mod_a
 mpi i/o
 mod_nctools.F
 
+add p_sigma_distribution
+mod_input.F, mod_main.F, mod_setup.F
+
